--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Michał Harężlak"
+            "name": "Michał Harężlak",
+            "homepage": "https://github.com/michal-hary"
         },
         {
             "name": "Dmitriy Scherbina",
@@ -37,11 +38,13 @@
         "matthiasnoback/symfony-dependency-injection-test": "^0.7"
     },
     "autoload": {
-        "psr-4": { "Dmishh\\SettingsBundle\\": "" }
+        "psr-4": {
+            "Mhary\\SettingsBundle\\": ""
+        }
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "2.0.x-dev"
+            "dev-master": "2.0-dev"
         }
     },
     "suggest": {
