--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,11 @@ php:
 matrix:
     include:
         - php: 5.6
-          env: SYMFONY_VERSION=2.7.*
-        - php: 5.6
           env: SYMFONY_VERSION=3.0.*
+        - php: 5.6
+          env: SYMFONY_VERSION=3.1.*
+        - php: 5.6
+          env: SYMFONY_VERSION=3.2.*
 
 env:
     - SYMFONY_VERSION=3.3.*
@@ -29,6 +31,7 @@ before_install:
 install:
   - composer require symfony/framework-bundle:${SYMFONY_VERSION} --no-update
   - composer require symfony/form:${SYMFONY_VERSION} --no-update
+  - composer require symfony/translation:${SYMFONY_VERSION} --no-update
   - composer update
 
 script:
