--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,9 @@
     "require": {
         "php": "^5.5.9|^7.0",
         "psr/cache": "^1.0",
-        "symfony/framework-bundle": "^2.7|^3.0",
-        "symfony/form": "^2.7|^3.0",
+        "symfony/framework-bundle": "^3.0",
+        "symfony/form": "^3.0",
+        "symfony/translation": "^3.0",
         "doctrine/orm": "^2.2.3"
     },
     "require-dev": {
