--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "symfony/framework-bundle": "^3.0",
         "symfony/form": "^3.0",
         "symfony/translation": "^3.0",
+        "symfony/validator": "^3.0",
         "doctrine/orm": "^2.2.3"
     },
     "require-dev": {
